# mellanni2025

./: .gitignore  __init__.py  classes_practice.py  classes_test.py  main.py  main.py.bak  pd_performance.py  pd_performance_new.py  price_increase_performance.py  pyproject.toml  reports.py  requirements.txt  restock.py  run.bat  run.sh  sop_database.py  test.py  test3.py  timezone_test.py
classes/: dataset.py  product.py
common/: __init__.py  events.py  global_params.py
connectors/: gcloud.py  gdrive.py
gui/: ctk_windows.py
js/: character_count.js  ld_upload.js  table_download.js
modules/: price_checker.py  weekly_conversion.py
practice/: api2_practice.py  api3_practice.py  api_practice.py  decorators_practice.py  fuzzy_search_practice.py  pyqt_test.py  set_practice.py  sqp_practice.py  sqp_practice2.py  tg_practice.py  timezone_practice.py  try_except.py
practice/async_practice/: async_example.py  (+2 more)
restock_practice/: __init__.py  column_names.py  crop_images.py  database_tools.py  main.py  overview.txt  utils_restock.py
scripts/: aws_image_rekognition.py  build_weekly_ceo_report.py  bundle_checker.py  check_titles.py  color_name_checker.py  coupon_helper.py  create_weekly_ceo_draft.py  data.py  dimensions.py  event_sales.py  flagged_words.py  lost_sales.py  marketplace_promos.py  new_template_transfer.py  oversize_check.py  price_checker.py  push_dictionary.py  restock.py  size_match.py  sqp_analyzer.py  title_duplicates_checker.py  verify_weekly_ceo_report.py  weekly_conversion.py
utils/: __init__.py  dataset.py  mellanni_modules.py  product.py
(+24 files in other folders)
