[project]
name = "mellanni2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.6",
    "customtkinter>=5.2.2",
    "db-dtypes>=1.4.3",
    "fuzzywuzzy>=0.18.0",
    "gdown>=5.2.0",
    "google-api-python-client>=2.178.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-storage>=3.2.0",
    "gspread>=6.2.1",
    "helper-modules",
    "inflect>=7.5.0",
    "matplotlib>=3.10.5",
    "openai>=1.99.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "pillow>=11.3.0",
    "pyperclip>=1.11.0",
    "pyside6>=6.9.1",
    "python-levenshtein>=0.27.1",
    "python-telegram-bot>=22.3",
    "tkcalendar>=1.6.1",
    "xlsxwriter>=3.2.5",
]

[tool.uv.sources]
helper-modules = { git = "https://github.com/misunders2d/helper-modules.git", rev = "master" }

[dependency-groups]
dev = [
    "easygui>=0.98.3",
    "pymsgbox>=2.0.1",
    "pyside6>=6.10.1",
]
